--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Map#index</h1>
-<p>Find me in app/views/map/index.html.erb</p>
+<h1>prepared.ly</h1>
+
+<iframe width=640 height=480 src='https://tinio.cartodb.com/tables/afd_station_location/embed_map'></iframe>
