--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,1 +1,4 @@
+Address: <%= @address %> <br/>
+Coordinates: <%= @coordinates %> <br/>
+
 <iframe width=640 height=480 src='https://tinio.cartodb.com/tables/afd_station_location/embed_map'></iframe>
