--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,10 +4,22 @@
 
   <title>Preparedly</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <!-- TODO: Move in controller specific stylesheet -->
+  <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.css">
+  <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.ie.css">
+  <style>
+    #map {
+      height: 480px;
+      width: 640px;
+    }
+  </style>
+
+  <!-- TODO: Move JS at bottom of body? -->
   <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
   <script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+  <%= csrf_meta_tags %>
 </head>
 <body>
 <div id="beta">
