[#27955903]display weather conditions

--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,5 +1,6 @@
 Address: <%= @address %> <br/>
 Coordinates: <%= @coordinates %> <br/>
+<%= @weather %>
 
 <!-- div that will display the map that is set using below javascript -->
 <div id="map"></div>
