[delivers #27955903] display just wind conditions and humidity

--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,6 +1,7 @@
 Address: <%= @address %> <br/>
 Coordinates: <%= @coordinates %> <br/>
-<%= @weather %>
+Wind: <%= @wind_conditions %> <br/>
+Humidity: <%= @relative_humidity %> <br/>
 
 <!-- div that will display the map that is set using below javascript -->
 <div id="map"></div>
