--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -38,30 +38,33 @@ Humidity: <%= @relative_humidity %> <br/>
             attrib = 'Map tiles by Stamen',
             baseLayer = new L.TileLayer(baseUrl, {attribution: attrib, maxZoom:18});
         map.addLayer(baseLayer);
+
+        var tx_burn_ban_counties = new L.CartoDBLayer({
+        show_cartodb_logo: false,
+        map_canvas: 'map',
+        map: map,
+        user_name:'tinio',
+        table_name: 'cntys04',
+        query: "SELECT cartodb_id, the_geom_webmercator FROM {{table_name}}",
+        infowindow: "SELECT cartodb_id, name_locas FROM {{table_name}} WHERE cartodb_id={{feature}}",
+        auto_bound: false 
+        });
+
         var homeMarker = new L.Marker(new L.LatLng(<%= @coordinates[0] %>, <%= @coordinates[1] %>));
         map.addLayer(homeMarker);
         map.setView(mapCenter, mapZoom);
 
-        var cartodbLeaflet = new L.CartoDBLayer({
+        var austin_fire_stations = new L.CartoDBLayer({
         show_cartodb_logo: false,
         map_canvas: 'map',
         map: map,
         user_name:'tinio',
         table_name: 'afd_station_location',
         query: "SELECT cartodb_id, the_geom_webmercator FROM {{table_name}} ORDER BY ST_Distance(the_geom, ST_GeomFromText('POINT(<%= @coordinates[1]%> <%= @coordinates[0] %>)',4326)) LIMIT 1",
-        tile_style: "#{{table_name}} {" +
-                   "marker-fill:#FF6600;" +
-                   "marker-line-color:white;" +
-                   "marker-line-width:3;" +
-                   "marker-opacity:1;" +
-                   "marker-line-opacity:1;" +
-                   "marker-placement:point;" +
-                   "marker-type:ellipse;" +
-                   "marker-allow-overlap:true;" +
-                "}",
         infowindow: "SELECT cartodb_id, address FROM {{table_name}} WHERE cartodb_id={{feature}}",
         auto_bound: false 
         });
+
       }
     });
 </script>
