--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,7 +23,11 @@ audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
 audio:not([controls]) { display: none; }
 [hidden] { display: none; }
 
-html { font-size: 100%; -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
+html { font-size: 100%; 
+	-webkit-text-size-adjust: 100%; 
+	-ms-text-size-adjust: 100%; 
+	height:100%;
+	}
 html, button, input, select, textarea { 
 	font-family: sans-serif; 
 	color: #222; 
@@ -34,6 +38,7 @@ body {
 	line-height: 1.6; 
 	font-family: "museo-sans", sans-serif;
 	color: #666666;
+	height:100%;
 }
 
 h1 {
@@ -269,6 +274,42 @@ td { vertical-align: top; }
 .address {
 	width:300px;
 }
+/*----footer ---*/
+#wrap {min-height: 100%;}
+
+#main-wrap {overflow:auto;
+	padding-bottom: 180px;}  /* must be same height as the footer */
+
+#footer {position: relative;
+	margin-top: -113px; /* negative value of footer height */
+	height: 113px;
+	clear:both;
+	} 
+
+#footer-bottom {
+	background: url('footer.png') no-repeat;
+    height: 113px;
+    margin: 0 auto;
+    padding: 0 10px;
+    width: 979px;
+	}	
+#footer-green {
+	background: #336633;
+	height:26px;
+    position: relative;
+    top: 114px;
+    z-index: -3;
+}
+/*Opera Fix*/
+body:before {/* thanks to Maleika (Kohoutec)*/
+content:"";
+height:100%;
+float:left;
+width:0;
+margin-top:-32767px;/* thank you Erik J - negate effect of float*/
+}
+
+
 
 /* =============================================================================
    Media Queries
