--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,33 +16,40 @@
 
   <!-- TODO: Move JS at bottom of body? -->
   <%= javascript_include_tag "application" %>
-  <script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>
+  <!--<script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>-->
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<div id="beta">
+<div id="wrap">
+	<div id="main-wrap">
+		<div id="beta">
+		</div>
+		<p class="notice"><%= notice %></p>
+		<p class="alert"><%= alert %></p>
+			<div class="nav-bar">
+				<ul class="nav-bar-items">
+  					<%= render 'devise/menu/registration_items' %>
+  					<%= render 'devise/menu/login_items' %>
+					<li><%= link_to "About", page_path("about") %>
+					</li>
+				</ul>
+			</div>
+			<a href="https://www.prepared.ly/">
+				<div id="logo" title"preparedly">
+				</div>
+			</a>
+			<div id="main">
+				<%= yield %>
+			</div>
+	</div>
 </div>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-<div class="nav-bar">
-	<ul class="nav-bar-items">
-  		<%= render 'devise/menu/registration_items' %>
-  		<%= render 'devise/menu/login_items' %>
-
-		<li><%= link_to "About", page_path("about") %>
-		</li>
-	</ul>
-</div>
-<a href="https://www.prepared.ly/">
-<div id="logo" title"preparedly">
-</div>
-</a>
-
-<div id="main">
-<%= yield %>
-</div>
+<div id="footer">
+	<div id="footer-green">
+	</div>
+	<div id="footer-bottom">
+	</div>
+</div>		
 </body>
 </html>
