--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
 
   <title>Preparedly</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+
   <!-- TODO: Move in controller specific stylesheet -->
   <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.css">
   <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.ie.css">
@@ -13,13 +14,9 @@
       width: 640px;
     }
   </style>
-
-  <!-- TODO: Move JS at bottom of body? -->
-  <%= javascript_include_tag "application" %>
-  <!--<script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>-->
-  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
+  <%= yield :stylesheet_yield %>
   <%= csrf_meta_tags %>
+
 </head>
 <body>
 <div id="wrap">
@@ -37,7 +34,7 @@
 				</ul>
 			</div>
 			<a href="https://www.prepared.ly/">
-				<div id="logo" title"preparedly">
+				<div id="logo" title="preparedly">
 				</div>
 			</a>
 			<div id="main">
@@ -50,6 +47,14 @@
 	</div>
 	<div id="footer-bottom">
 	</div>
-</div>		
+	
+</div>
+<script type="text/javascript" src="http://use.typekit.com/osj8jgk.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+<%= yield :javascript_yield %>
+<%= javascript_include_tag "application" %>
+		
+
+
 </body>
 </html>
