--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,19 +1,34 @@
+<% content_for :stylesheet_yield do %>
+  <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.css">
+  <link rel="stylesheet" href="http://code.leafletjs.com/leaflet-0.3.1/leaflet.ie.css">
+  <style>
+    #map {
+      height: 480px;
+      width: 640px;
+    }
+  </style>
+<% end %>
+
 Address: <%= @address %> <br/>
 Coordinates: <%= @coordinates %> <br/>
+Wind: <%= @wind_conditions %> <br/>
+Humidity: <%= @relative_humidity %> <br/>
 
 <!-- div that will display the map that is set using below javascript -->
 <div id="map"></div>
 
-
+<% content_for :javascript_yield do %>
 <!-- scripts -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="http://code.leafletjs.com/leaflet-0.3.1/leaflet.js"></script>
+<script type="text/javascript" src="http://vizzuality.github.com/cartodb-leaflet/wax.leaflet.min.js"></script>
+<script type="text/javascript" src="http://vizzuality.github.com/cartodb-leaflet/cartodb-leaflet.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
  
-      stamenTiles();
+      stamenTilesWithStations();
 
-      function stamenTiles() {
+      function stamenTilesWithStations() {
         
         // make a map, using normal leaflet and stamen toner tiles
         var map = new L.Map('map');
@@ -23,7 +38,34 @@ Coordinates: <%= @coordinates %> <br/>
             attrib = 'Map tiles by Stamen',
             baseLayer = new L.TileLayer(baseUrl, {attribution: attrib, maxZoom:18});
         map.addLayer(baseLayer);
+
+        var tx_burn_ban_counties = new L.CartoDBLayer({
+        show_cartodb_logo: false,
+        map_canvas: 'map',
+        map: map,
+        user_name:'tinio',
+        table_name: 'cntys04',
+        query: "SELECT cartodb_id, the_geom_webmercator FROM {{table_name}}",
+        infowindow: "SELECT cartodb_id, name_locas FROM {{table_name}} WHERE cartodb_id={{feature}}",
+        auto_bound: false 
+        });
+
+        var homeMarker = new L.Marker(new L.LatLng(<%= @coordinates[0] %>, <%= @coordinates[1] %>));
+        map.addLayer(homeMarker);
         map.setView(mapCenter, mapZoom);
+
+        var austin_fire_stations = new L.CartoDBLayer({
+        show_cartodb_logo: false,
+        map_canvas: 'map',
+        map: map,
+        user_name:'tinio',
+        table_name: 'afd_station_location',
+        query: "SELECT cartodb_id, the_geom_webmercator FROM {{table_name}} ORDER BY ST_Distance(the_geom, ST_GeomFromText('POINT(<%= @coordinates[1]%> <%= @coordinates[0] %>)',4326)) LIMIT 1",
+        infowindow: "SELECT cartodb_id, address FROM {{table_name}} WHERE cartodb_id={{feature}}",
+        auto_bound: false 
+        });
+
       }
     });
 </script>
+<% end %>
