about page copy

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -274,7 +274,7 @@ td { vertical-align: top; }
 .address {
 	width:300px;
 }
-/*----footer ---*/
+/*----footer stuff---*/
 #wrap {min-height: 100%;}
 
 #main-wrap {overflow:auto;
