--- a/app/views/share/index.html.erb
+++ b/app/views/share/index.html.erb
@@ -1,1 +1,7 @@
-<a href='/?ref=<%= @referral_code %>'>Referral Link</a>
+<a href='/?ref=<%= @referral_code %>'>http://www.prepared.ly/?ref=<%= @referral_code %></a>
+<br/>
+<a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.prepared.ly/?ref=<%= @referral_code %>" data-text="Make staying prepared fun and easy! Check out the site" data-via="ATXPreparedly" data-size="large" data-hashtags="cfaATX">Tweet</a>
+
+<% content_for :javascript_yield do %>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<% end %>
