[#27726331]share through facebook

--- a/app/views/share/index.html.erb
+++ b/app/views/share/index.html.erb
@@ -1,7 +1,20 @@
+<!-- FB Setup-->
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=366357736748301";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 <a href='/?ref=<%= @referral_code %>'>http://www.prepared.ly/?ref=<%= @referral_code %></a>
+<br/>
+<div class="fb-like" data-href="http://www.prepared.ly/?ref=<%= @referral_code %>" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-action="recommend"></div>
 <br/>
 <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.prepared.ly/?ref=<%= @referral_code %>" data-text="Make staying prepared fun and easy! Check out the site" data-via="ATXPreparedly" data-size="large" data-hashtags="cfaATX">Tweet</a>
 
 <% content_for :javascript_yield do %>
+<!-- Twitter Setup-->
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <% end %>
