[#27726331]share through tumblr

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
 <% content_for :fb_og_tags do %>
   <meta property="og:title" content="prepared.ly - Make staying prepared fun and easy!" />
   <meta property="og:type" content="company" /><meta property="og:site_name" content="prepared.ly" />
+  <meta property="og:url" content="http://prepared.ly" />
   <meta property="og:image" content="https://launchrock-assets.s3.amazonaws.com/facebook-files/UPZ4FCUWFEtEXSu.png" />
   <meta property="og:description" content="I just signed up to be the first to know about prepared.ly, a home and neighborhood safety app by Code for America Austin" />
 <% end %>
