--- a/app/views/share/index.html.erb
+++ b/app/views/share/index.html.erb
@@ -29,6 +29,8 @@
   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 <% end %>
 
+<h2>Thanks for signing up! Please tell others about prepared.ly</h2>
+<br/>
 <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.prepared.ly/?ref=<%= @referral_code %>" data-text="Make staying prepared fun and easy! Check out the site" data-via="ATXPreparedly" data-hashtags="cfaATX">Tweet</a>
 <span id="tumblr_button_abc123"></span>
 <div class="fb-like" data-href="http://www.prepared.ly/" ref="<%= @referral_code %>" data-send="false" data-layout="button_count" data-width="450" data-show-faces="false" data-action="recommend"></div>
