--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -20,11 +20,18 @@
     <%= submit_tag("Locate", :class => 'button blue') %>
 <% end %>
 
-Wind: <%= @wind_conditions %> <br/>
-Humidity: <%= @relative_humidity %> <br/>
+<divj
+  <div style="width:200px; float: left">
+    Wind:<br/>
+    <%= @wind_conditions %> <br/>
+    <br/>
+    Humidity:<br/>
+    <%= @relative_humidity %> <br/>
+  </div>
+  <!-- div that will display the map that is set using below javascript -->
+  <div id="map"></div>
+</div>
 
-<!-- div that will display the map that is set using below javascript -->
-<div id="map"></div>
 
 <% content_for :javascript_yield do %>
 <!-- scripts -->
@@ -42,7 +49,7 @@ Humidity: <%= @relative_humidity %> <br/>
         // make a map, using normal leaflet and stamen toner tiles
         var map = new L.Map('map');
         var mapCenter = new L.LatLng(<%= @coordinates[0] %>, <%= @coordinates[1] %>);
-        var mapZoom = 11;
+        var mapZoom = 12;
         var baseUrl = 'http://{s}.tile.stamen.com/watercolor/{z}/{x}/{y}.jpg',
             attrib = 'Map tiles by Stamen',
             baseLayer = new L.TileLayer(baseUrl, {attribution: attrib, maxZoom:18});
