--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -20,7 +20,7 @@
     <%= submit_tag("Locate", :class => 'button blue') %>
 <% end %>
 
-<divj
+<div>
   <div style="width:200px; float: left">
     Wind:<br/>
     <%= @wind_conditions %> <br/>
