--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -27,6 +27,11 @@
     <br/>
     Humidity:<br/>
     <%= @relative_humidity %> <br/>
+    Distance:<br/>
+    <%= @distance %> meters <br/>
+    Coordinates:<br/>
+    <%= @address.latlon.y %> <%= @address.latlon.x %> <br/>
+  </div>
   </div>
   <!-- div that will display the map that is set using below javascript -->
   <div id="map"></div>
@@ -76,7 +81,7 @@
         map: map,
         user_name:'tinio',
         table_name: 'afd_station_location',
-        query: "SELECT cartodb_id, the_geom_webmercator FROM {{table_name}} ORDER BY ST_Distance(the_geom, ST_GeomFromText('POINT(<%= @address.latlon.x %> <%= @address.latlon.y %>)',4326)) LIMIT 1",
+        query: "SELECT cartodb_id, the_geom_webmercator FROM {{table_name}} WHERE cartodb_id=<%= @cfs.id %>",
         infowindow: "SELECT cartodb_id, address FROM {{table_name}} WHERE cartodb_id={{feature}}",
         auto_bound: false 
         });
