--- a/app/views/map/post.html.erb
+++ b/app/views/map/post.html.erb
@@ -31,6 +31,9 @@
     Distance:<br/>
     <%= @distance %> meters <br/>
     <br/>
+    Inside of a Burn Ban:<br/>
+    <%= @inside_burnban %><br/>
+    <br/>
 
     <br/>
     Coordinates:<br/>
