--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -163,6 +163,8 @@ button, input {
 		from(#cc6633),
 		to(#fc8346));
 }
+
+/*
 	-webkit-box-shadow:
 		0px 1px 2px rgba(77,77,77,0.3),
 		inset 0px 0px 3px rgba(122,41,0,1);
@@ -170,7 +172,8 @@ button, input {
 		0px -1px 0px rgba(255,255,255,0.1),
 		0px 1px 0px rgba(125,125,125,1);
 }
-	
+*/
+
 button, input[type="button"], input[type="reset"], input[type="submit"] { 
 	cursor: pointer; -webkit-appearance: button; *overflow: visible; }
 button[disabled], input[disabled] { 
